<resources>
    <string name="app_name">Task</string>

    <string name="description_image_item">A single image</string>
    <string name="description_back_button">Back button</string>
    <string name="description_app_s_logo">App\'s Logo</string>

    <string name="please_enter_your_email">Please Enter your Email</string>
    <string name="please_enter_your_password">Please enter your Password</string>
    <string name="please_enter_your_age">Please enter your age</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="size">Size</string>
    <string name="type">Type</string>
    <string name="uploaded_by">Uploaded By</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account, <u>register now!</u></string>
    <string name="invalid_email_address">Please make sure your email address is valid!</string>
    <string name="invalid_password">Your password must be between 6 and 12 characters long!</string>
    <string name="invalid_age">Your age must be between 18 and 99 years old.</string>
    <string name="please_make_sure_all_the_data_is_correct">Please make sure all the data are correct</string>
    <string name="uploaded_by_template">Uploaded By %s</string>
    <string name="something_went_wrong_please_try_again_later">Something went wrong, please try again later!</string>

</resources>